@@ -173,7 +173,7 @@ class SplitBlockDialog extends DialogComponentProvider {
 		blockOneEnd.setAddress(endAddr);
 		blockOneEnd.setAddressSpaceEditable(false);
 
-		blockOneLengthField.setValue(new Long(block.getSize()));
+		blockOneLengthField.setValue(Long.valueOf(block.getSize()));
 
 		blockTwoNameField.setText(name + ".split");
 
@@ -273,7 +273,7 @@ class SplitBlockDialog extends DialogComponentProvider {
 				blockTwoStart.setAddress(b2Start);
 				long b2Length = block.getEnd().subtract(b2Start) + 1;
 
-				blockTwoLengthField.setValue(new Long(b2Length));
+				blockTwoLengthField.setValue(Long.valueOf(b2Length));
 
 			}
 			catch (Exception e) {
@@ -305,7 +305,7 @@ class SplitBlockDialog extends DialogComponentProvider {
 				blockOneEnd.setAddress(b1End);
 				length = (int) b1End.subtract(block.getStart()) + 1;
 
-				blockOneLengthField.setValue(new Long(length));
+				blockOneLengthField.setValue(Long.valueOf(length));
 
 			}
 			catch (Exception e) {
@@ -386,13 +386,13 @@ class SplitBlockDialog extends DialogComponentProvider {
 					"End address must be less than original block end (" + block.getEnd() + ")");
 				return false;
 			}
-			blockOneLengthField.setValue(new Long(length));
+			blockOneLengthField.setValue(Long.valueOf(length));
 
 			try {
 				Address b2Start = end.addNoWrap(1);
 				blockTwoStart.setAddress(b2Start);
 				length = block.getEnd().subtract(b2Start) + 1;
-				blockTwoLengthField.setValue(new Long(length));
+				blockTwoLengthField.setValue(Long.valueOf(length));
 			}
 			catch (Exception e) {
 				if (e instanceof AddressOverflowException) {
@@ -428,12 +428,12 @@ class SplitBlockDialog extends DialogComponentProvider {
 
 			// change block Two length, blockOneEnd, block One length
 			long length = end.subtract(start) + 1;
-			blockTwoLengthField.setValue(new Long(length));
+			blockTwoLengthField.setValue(Long.valueOf(length));
 			try {
 				Address b1End = start.subtractNoWrap(1);
 				blockOneEnd.setAddress(b1End);
 				length = b1End.subtract(block.getStart()) + 1;
-				blockOneLengthField.setValue(new Long(length));
+				blockOneLengthField.setValue(Long.valueOf(length));
 			}
 			catch (Exception e) {
 				if (e instanceof AddressOverflowException) {
