@@ -179,7 +179,7 @@ public class StackFrameDataType extends BiDirectionDataType {
 		if (offset < getMinOffset() || offset > getMaxOffset()) {
 			throw new ArrayIndexOutOfBoundsException(offset);
 		}
-		int index = Collections.binarySearch(components, new Integer(offset), offsetComparator);
+		int index = Collections.binarySearch(components, Integer.valueOf(offset), offsetComparator);
 		if (index >= 0) {
 			return components.get(index);
 		}
@@ -198,7 +198,7 @@ public class StackFrameDataType extends BiDirectionDataType {
 		if (ordinal < 0 || ordinal >= getNumComponents()) {
 			throw new ArrayIndexOutOfBoundsException(ordinal);
 		}
-		int index = Collections.binarySearch(components, new Integer(ordinal), ordinalComparator);
+		int index = Collections.binarySearch(components, Integer.valueOf(ordinal), ordinalComparator);
 		if (index >= 0) {
 			return components.get(index);
 		}
@@ -291,7 +291,7 @@ public class StackFrameDataType extends BiDirectionDataType {
 	}
 
 //	private int getFirstParameterLength() {
-//		Object offsetKey = new Integer(0);
+//		Object offsetKey = Integer.valueOf(0);
 //		DataTypeComponent[] variables = getDefinedComponents();
 //		int loc = Arrays.binarySearch(variables, offsetKey, offsetComparator);
 //		loc = (loc < 0 ? -1 - loc : loc);
@@ -308,7 +308,7 @@ public class StackFrameDataType extends BiDirectionDataType {
 //	}
 
 	void shiftParamOffset(int offset, int deltaOrdinal, int deltaLength) {
-		int index = Collections.binarySearch(components, new Integer(offset), offsetComparator);
+		int index = Collections.binarySearch(components, Integer.valueOf(offset), offsetComparator);
 		if (index < 0) {
 			index = -index - 1;
 		}
@@ -326,11 +326,11 @@ public class StackFrameDataType extends BiDirectionDataType {
 	 */
 	@SuppressWarnings("unused")
 	private void clearRange(int minOffset, int maxOffset) {
-		int first = Collections.binarySearch(components, new Integer(minOffset), offsetComparator);
+		int first = Collections.binarySearch(components, Integer.valueOf(minOffset), offsetComparator);
 		if (first < 0) {
 			first = -first - 1;
 		}
-		int last = Collections.binarySearch(components, new Integer(maxOffset), offsetComparator);
+		int last = Collections.binarySearch(components, Integer.valueOf(maxOffset), offsetComparator);
 		if (last < 0) {
 			last = -last - 2;
 		}
@@ -372,7 +372,7 @@ public class StackFrameDataType extends BiDirectionDataType {
 		if (offset < getMinOffset() || offset > getMaxOffset()) {
 			throw new ArrayIndexOutOfBoundsException(offset);
 		}
-		int index = Collections.binarySearch(components, new Integer(offset), offsetComparator);
+		int index = Collections.binarySearch(components, Integer.valueOf(offset), offsetComparator);
 		if (index >= 0) {
 			clearComponent(index);
 		}
@@ -589,7 +589,7 @@ public class StackFrameDataType extends BiDirectionDataType {
 		}
 
 		int nextOffset = offset;
-		int index = Collections.binarySearch(components, new Integer(offset), offsetComparator);
+		int index = Collections.binarySearch(components, Integer.valueOf(offset), offsetComparator);
 		if (index >= 0) {
 			index++;
 		}
@@ -687,7 +687,7 @@ public class StackFrameDataType extends BiDirectionDataType {
 		if (ordinal < 0 || ordinal >= getNumComponents()) {
 			return false;
 		}
-		int index = Collections.binarySearch(components, new Integer(ordinal), ordinalComparator);
+		int index = Collections.binarySearch(components, Integer.valueOf(ordinal), ordinalComparator);
 		if (index >= 0) {
 			return true;
 		}
