@@ -27,12 +27,12 @@ public class IntegerColumnAdapter extends AbstractColumnAdapter {
 
 	@Override
 	Object getKeyValue(DBRecord rec) {
-		return new Integer(((IntField) rec.getKeyField()).getIntValue());
+		return Integer.valueOf(((IntField) rec.getKeyField()).getIntValue());
 	}
 
 	@Override
 	Object getValue(DBRecord rec, int col) {
-		return new Integer(rec.getIntValue(col));
+		return Integer.valueOf(rec.getIntValue(col));
 	}
 
 }
