@@ -3911,7 +3911,7 @@ public class ProgramMerge implements PropertyVisitor {
 		}
 		else if (map instanceof LongPropertyMap) {
 			try {
-				return new Long(((LongPropertyMap) map).getLong(address));
+				return Long.valueOf(((LongPropertyMap) map).getLong(address));
 			}
 			catch (NoValueException e) {
 				return null;
@@ -3919,7 +3919,7 @@ public class ProgramMerge implements PropertyVisitor {
 		}
 		else if (map instanceof IntPropertyMap) {
 			try {
-				return new Integer(((IntPropertyMap) map).getInt(address));
+				return Integer.valueOf(((IntPropertyMap) map).getInt(address));
 			}
 			catch (NoValueException e) {
 				return null;
